# sdk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml  test.py
python/: README.md  pyproject.toml  pytest.ini
python/docs/: Makefile  make.bat
python/docs/cli/: Makefile  _reference.py  api-key.md  api-key.rst  base-studio.md  base-studio.rst  conf.py  config.md  config.rst  container.md  container.rst  cp.md  cp.rst  dataset.rst  deployment.md  deployment.rst  file.md  file.rst  folder.md  folder.rst  index.md  index.rst  job.md  job.rst  license.md  license.rst  machine.md  machine.rst  mmt.md  mmt.rst  model.md  model.rst  sandbox.md  sandbox.rst  ssh.md  ssh.rst  studio.md  studio.rst
python/docs/cli/_static/: main.css
python/docs/sdk/: api.rst  conf.py  examples.rst  index.rst
python/docs/sdk/api/: datasets.rst  deployment.rst  experiment.rst  organization.rst  owner.rst  teamspace.rst  user.rst
python/docs/sdk/examples/: api-cli.rst  jobs-cli.rst  mmts-cli.rst  mmts.rst  studios-cli.rst
python/docs/source/: api.rst  cli.rst  conf.py  examples.rst  index.rst  install.rst  quickstart.rst
python/docs/source/api/: agent.rst  aihub.rst  job.rst  k8s-cluster.rst  machine.rst  mmt.rst  models.rst  plugins.rst  status.rst  studio.rst
python/docs/source/cli/: aihub.rst  api-key.rst  base-studio.rst  config.rst  container.rst  cp.rst  deployment.rst  file.rst  folder.rst  job.rst  license.rst  machine.rst  mmt.rst  model.rst  sandbox.rst  ssh.rst  studio.rst  vm.rst
python/docs/source/examples/: jobs.rst  sandboxes-cli.rst  sandboxes.rst  studios.rst  teamspaces-cli.rst  teamspaces.rst
python/examples/: README.md  api.sh  api_cli.rst  arbitrary_code_sandbox.py  asyncllm.py  deployment.py  deployment_cli.sh  filesystem_sandbox.py  interpreter_sandbox.py  jobs.py  jobs.rst  jobs_cli.rst  mmts.py  mmts.rst  mmts_cli.rst  multi_tenant_lambda.py  sandbox_pty.py  sandboxes.py  sandboxes.rst  sandboxes_cli.rst  studio.py  studios.py  studios.rst  studios_cli.rst  teamspaces.py  teamspaces.rst  teamspaces_cli.rst
python/examples/langchain/: README.md  agent.py
python/examples/langchain/src/: edges.py
python/examples/pipelines/: auto_deploy.py  three_jobs_pipeline.py
python/examples/sandbox_cookbook/codelangchain/: README.md  agent.py  requirements.txt
python/lightning_sdk/: __init__.py  __version__.py  agents.py  datasets.py  deployment.py  exceptions.py  filesystem.py  helpers.py  job.py  k8s_cluster.py  machine.py  mmt.py  models.py  owner.py  plugin.py  sandbox.py  serve.py  studio.py  teamspace.py  user.py
python/lightning_sdk/api/: __init__.py  agents_api.py  api_key_api.py  base_studio_api.py  cloud_account_api.py  deployment_api.py  filesystem_api.py  gpu_telemetry_api.py  job_api.py  k8s_api.py  license_api.py  lightning_storage_upload.py  llm_api.py  mmt_api.py  org_api.py  pipeline_api.py  sandbox_api.py  studio_api.py  teamspace_api.py  utils.py
python/lightning_sdk/cli/: entrypoint.py  groups.py  legacy_redirects.py
python/lightning_sdk/cli/api/: __init__.py  deploy.py  dockerize.py  request.py
python/lightning_sdk/cli/api_key/: __init__.py  common.py  create.py  delete.py  get.py  list.py
python/lightning_sdk/cli/base_studio/: __init__.py  list.py
python/lightning_sdk/cli/config/: __init__.py  get.py  set.py  show.py
python/lightning_sdk/cli/container/: __init__.py  delete.py  download.py  list.py  upload.py
python/lightning_sdk/cli/cp/: __init__.py  teamspace_uploads.py
python/lightning_sdk/cli/dataset/: __init__.py  download.py  upload.py
python/lightning_sdk/cli/deployment/: __init__.py  _byom_ack.py  common.py  create.py  delete.py  inspect.py  list.py  logs.py  reload_weights.py  update.py
python/lightning_sdk/cli/file/: __init__.py  download.py  upload.py
python/lightning_sdk/cli/folder/: __init__.py  download.py  upload.py
python/lightning_sdk/cli/job/: __init__.py  delete.py  inspect.py  list.py  (+2 more)
python/lightning_sdk/deployment/: deployment.py
python/lightning_sdk/filesystem/: __init__.py
python/lightning_sdk/job/: base.py  job.py  v1.py  v2.py
python/lightning_sdk/lightning_cloud/: __init__.py  login.py  rest_client.py
python/lightning_sdk/llm/: llm.py
python/lightning_sdk/mmt/: __init__.py  base.py  mmt.py  v1.py  v2.py
python/lightning_sdk/pipeline/: pipeline.py  schedule.py  steps.py  utils.py
python/lightning_sdk/sandbox/: __init__.py  base.py  command.py  config.py  filesystem.py  network_policy.py  process.py  pty.py  sandbox.py
python/lightning_sdk/services/: file_endpoint.py
python/lightning_sdk/utils/: config.py  filesystem.py  names.py  resolve.py
python/tests/: __init__.py  conftest.py  requirements-cli.txt  test_dataset_download.py  test_packaging_metadata.py
python/tests/api/: __init__.py  test_agent_api.py  test_api_key_api.py  test_cluster_api.py  test_deployment_api.py  test_filesystem_api.py  test_gpu_telemetry_api.py  test_job_api.py  test_k8s_api.py  test_license_api.py  test_lit_container_api.py  test_mmt_api.py  test_org_api.py  test_permissions.py  test_pipeline_api.py  test_sandbox_api.py  test_studio_api.py  test_teamspace_api.py  test_user_api.py  test_utils.py
python/tests/cli/: conftest.py  help.py  test_aihub.py  test_entrypoint.py
python/tests/core/: test_agents.py  test_cloud_provider.py  test_datasets.py  test_deployment.py  test_deprecated_arguments_removed.py  test_filesystem.py  test_helpers.py  test_job.py  test_k8s_cluster.py  test_lightning_storage_upload.py  test_lit_container.py  test_llm.py  test_mmt.py  test_models.py  test_network_policy.py  test_org.py  test_permissions_integration.py  test_pipeline.py  test_plugin.py  test_provisioning_examples.py  test_request_export.py  test_sandbox.py  test_sandbox_config.py  test_sandbox_pty.py  test_serve.py  test_teamspace.py  test_user.py
python/tests/lightning_cloud/: test_login.py
python/tests/services/: test_llm_finetune.py  test_utilities.py
python/tests/utils/: test_dynamic.py  test_license.py  test_logging.py  test_progress.py  test_resolve.py
(+1362 files in other folders)
