[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning_sdk"
authors = [
    {name = "Lightning-AI", email = "name@lightning.ai"},
]
description = "SDK to develop using lightning studios"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["deep learning", "machine learning", "pytorch", "AI"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lightning>=2.0.0",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "lightning_sdk.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[project.urls]
repository = "https://github.com/gridai/lightning-sdk"