[build-system]
requires = ["setuptools", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning_sdk"
authors = [
    {name = "Lightning-AI", email = "justus@lightning.ai"},
]
description = "SDK to develop using Lightning AI Studios"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["deep learning", "machine learning", "pytorch", "AI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "aiohttp",
    "backoff",
    "click",
    "fastapi",
    "pyjwt",
    "python-multipart",
    "requests",
    "rich",
    "six",
    "urllib3",
    "uvicorn",
    "websocket-client",
    "tqdm",
    "fire", # for CLI
    "simple-term-menu", # for CLI
    "lightning-utilities", # for legacy CLI
]
dynamic = ["version"]

[project.scripts]
lightning = "lightning_sdk.cli.entrypoint:main_cli"

[tool.setuptools.dynamic]
version = {attr = "lightning_sdk.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.black]
# https://github.com/psf/black
line-length = 120
exclude = "(.eggs|.git|.hg|.mypy_cache|.venv|_build|buck-out|build|dist|lightning_sdk/lightning_cloud)"

[tool.docformatter]
recursive = true
wrap-summaries = 119
wrap-descriptions = 120
blank = true


[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E",
    "W", # see: https://pypi.org/project/pycodestyle
    "F", # see: https://pypi.org/project/pyflakes
    "I", #see: https://pypi.org/project/isort/
    "D", # see: https://pypi.org/project/pydocstyle
    "N", # see: https://pypi.org/project/pep8-naming
]
extend-select = [
    "A",    # see: https://pypi.org/project/flake8-builtins
    "B",    # see: https://pypi.org/project/flake8-bugbear
    "C4",   # see: https://pypi.org/project/flake8-comprehensions
    "PT",   # see: https://pypi.org/project/flake8-pytest-style
    "RET",  # see: https://pypi.org/project/flake8-return
    "SIM",  # see: https://pypi.org/project/flake8-simplify
    "YTT",  # see: https://pypi.org/project/flake8-2020
    "ANN",  # see: https://pypi.org/project/flake8-annotations
    "TID",  # see: https://pypi.org/project/flake8-tidy-imports/
    "T10",  # see: https://pypi.org/project/flake8-debugger
    "Q",    # see: https://pypi.org/project/flake8-quotes
    "RUF",  # Ruff-specific rules
    "ISC",  # see: https://pypi.org/project/flake8-implicit-str-concat
    "PIE",  # see: https://pypi.org/project/flake8-pie
    "PLE",  # see: https://pypi.org/project/pylint/
    "PYI",  # see: https://pypi.org/project/flake8-pyi/
]
ignore = [
    "D101",   # Missing docstring in public function
    "D102",   # Missing docstring in public function
    "D103",   # Missing docstring in public function
    "A003",   # Class attribute shadowing python builtin -> false positive
    "E731",   # Do not assign a lambda expression, use a def
    "D100",   # todo: Missing docstring in public module
    "D104",   # todo: Missing docstring in public package
    "D107",   # Missing docstring in `__init__`
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "S301",   # todo: `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue  # todo
    "S310",   # todo: Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected.  # todo
    "B905",   # todo: `zip()` without an explicit `strict=` parameter
    "B028",   # no explicit stacklevel keyword argument found
    "RET506", # Unnecessary elif after raise -> sometimes false positives
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "docs",
    "examples",
    "tests",
]
ignore-init-module-imports = true
unfixable = ["F401"]

[tool.ruff.per-file-ignores]
"setup.py" = ["ANN202", "ANN401"]
"lightning_sdk/**" = ["ANN401"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

#[tool.ruff.pycodestyle]
#ignore-overlong-task-comments = true

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest]
mock_use_standalone_module = true
mock_traceback_monkeypatch = false

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".github",
    "dist",
    "build",
    "docs",
]
addopts = [
    "--strict-markers",
    "--doctest-modules",
    "--color=yes",
    "--disable-pytest-warnings",
    "--ignore=legacy/checkpoints",
]
markers = [
    "cloud:Run the cloud tests for example",
]
filterwarnings = [
    "error::FutureWarning",
]
xfail_strict = true
junit_duration_report = "call"

[tool.coverage.run]
omit = [
    "lightning_sdk/lightning_cloud/*",
]
